--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -32,7 +32,7 @@ source('https://raw.githubusercontent.com/Region-Dalarna/funktioner/main/func_AP
 options(dplyr.summarise.inform = FALSE)
 
 # Här läggs figurerna
-outputmapp = here('Diagram','/')
+outputmapp = here('Figurer','/')
 
 # Om man vill uppdatera den externa hemsidan sätts denna variabel till TRUE
 uppdatera_hemsida = FALSE
@@ -77,6 +77,8 @@ Här ska vi ha en sammanfattning av rapporten. Det ska vara en punktlista med de
 
 <li>Fjärde punkten </li>
 
+</ul>
+
 # Introduktion {-}
 Integration är ett ämne som är ständigt aktuellt i samhällsdebatten. Begreppet integration kan ses som en process där  *individer eller grupper med olika bakgrunder och förutsättningar blir en del av ett större socialt, ekonomiskt eller kulturellt sammanhang, samtidigt som deras egen identitet och särart respekteras*. 
 
@@ -86,9 +88,11 @@ Beroende på sammanhang kan integration ha olika betydelser:
 
 <li>Samhällelig integration: När människor med olika bakgrunder deltar i och bidrar till samhället på lika villkor, exempelvis genom arbete, utbildning och social interaktion. </li>
 
-</li>Ekonomisk integration: Att individer eller grupper har tillgång till arbetsmarknaden och ekonomiska resurser, vilket minskar ekonomiska klyftor. </li>
+<li>Ekonomisk integration: Att individer eller grupper har tillgång till arbetsmarknaden och ekonomiska resurser, vilket minskar ekonomiska klyftor. </li>
 
-</li>Kulturell integration: När olika kulturer möts och påverkar varandra utan att någon tvingas ge upp sin identitet. </li>
+<li>Kulturell integration: När olika kulturer möts och påverkar varandra utan att någon tvingas ge upp sin identitet. </li>
+
+</ul>
 
 <br>
 
@@ -96,7 +100,12 @@ Amnå och Stigendal (2021) betonar vikten av att vara tydlig vid användningen a
 
 Den strukturella integrationen handlar om skyldigheter och rättigheter via samhälleliga system, lagar och regler. Den kulturella integrationen handlar mer om hur vi upplever oss som integrerade via normer, värderingar och identiteter. En känsla av delaktighet skapar kulturell integration medan en lag skapar strukturell integration. I grunden handlar det här om alla individer som lever i ett land, även om den vardagliga diskussionen i mångt och mycket handlar om invandrare i förhållande till de som är födda och uppväxta i ett land.
 
-Även om integrationsfrågan är bredare, är det ändå viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för t ex kompetensförsörjningen på kort och lång sikt. Den här rapportens syfte är att redovisa aktuell statistik relaterat till utrikes föddas integration i samhället i Dalarna.
+Även om integrationsfrågan är bredare, är det ändå viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för t ex kompetensförsörjningen på kort och lång sikt. Andelen utrikes födda i arbetsför ålder har ökat successivt över de senaste 20 åren.
+
+
+*Lägg in Diagram 2 från Kompetensförsörjningsrapporten - andelar inrikes/utrikes födda i arbetsför ålder*
+
+Den här rapportens syfte är att redovisa aktuell statistik relaterat till utrikes föddas integration i samhället i Dalarna.
 
 # Bakgrund
 2019 publicerade Region Dalarna rapporten "Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv". Rapporten skrevs i en period där Sverige och Dalarna några år tidigare hade haft den största volymen av asylinvandring i historien. 
@@ -106,8 +115,6 @@ Den strukturella integrationen handlar om skyldigheter och rättigheter via samh
 Frågan är vad som har hänt under de sex år som gått sedan Region Dalarnas senaste rapport skrevs. Har integrationen utvecklats i en positiv riktning? 
 
 Rapporten kommer i stora drag följa 2019 års rapportdisposition, men tona ner delar som har med asylinvandringen att göra då den frågan inte längre är lika aktuell.
-
-
 
 
 ## Den utrikes födda befolkningen i Sverige och i Dalarna
@@ -147,6 +154,16 @@ demografin. Om kostnaderna för den offentliga servicen ökar i ungefär samma t
 Förutom att den demografiska situationen medför färre skattebetalare som ska försörja allt fler äldre så innebär den också ett kompetensförsörjningsproblem.
 
 *Bild över befolkningens åldersfördelning, kvinnor och män samt inrikes och utrikes födda*
+
+Finns i befolkningsrapporten
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
+
+# include png file
+knitr::include_graphics("Figurer/Befpyramid Dalarnas län 2023_jmfr_ar_1968.png")
+
+```
+
 
 Vid en analys av åldersfördelningen i Dalarnas befolkning uppdelat på den inrikes- och utrikes födda befolkningen blir det tydligt att den utrikes födda befolkningen i länet är väsentligt yngre än den inrikes födda, och har en större andel personer i arbetsför ålder (se diagram 12). Detta beror på att de personer som invandrat generellt är yngre än inrikes födda. Följden blir att invandringen totalt sett har en föryngrande effekt på befolkningen. Det finns även stora variationer i medelålder mellan olika grupper av utrikes födda beroende på invandringsår och födelseland.8 Utrikes födda utgör
 cirka 13 procent av den totala befolkningen i Dalarnas län och är därmed betydligt färre än inrikes födda.
@@ -293,12 +310,10 @@ En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna 
 
 När andelen behöriga till högskolan undersöks så kan det vara av större relevans att mäta hur stor andel av 19-åringarna som ett visst år är behöriga till högskolan. Detta eftersom vi i Sverige vanligtvis är 19 år när vi erhåller gymnasieexamen. Det är viktigt att komma ihåg att detta inte ger någon heltäckande bild av alla personer eftersom det finns vissa elever som slutför gymnasiet när de är yngre eller äldre än 19 år. En ej slutförd gymnasieexamen vid 19 års ålder beror ändå i en majoritet av fallen på att eleven ligger efter i skolan eller har hoppat av gymnasiet. Av denna anledning blir denna variabel relevant när andelen högskolebehöriga efter bakgrund och kön jämförs. Det som kan konstateras är att utrikes födda i betydligt lägre grad än inrikes födda blir behöriga till högskolestudier vid 19 års ålder. Oavsett om eleven eller föräldrarna är utrikes eller inrikes födda är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män.
 
-*Lyft in diagram 20 från Kompetensrapporten - nedan*
 
-<br>
-#```{r, echo=FALSE, fig.height=5, fig.width=9, fig.align='center', fig.cap="."}
-#gg_utbniva_85$hogutb_andel_ar20_1985_2023
-#```
+```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
+gg_utbniva_bakgrund_alder$utb_niva_bakgrund
+```
 
 *Andelar obehöriga till gymnasiet - inskrivna på IM-program utifrån bakgrund*
 
